Fixed text color of header links on pages with white background (all pages except index). Added nav bar box shadow transition. Fixed resume alignment and spacing.

--- a/css/ianabshire.css
+++ b/css/ianabshire.css
@@ -180,14 +180,20 @@ a:hover {
   width: 100%;
   height: 78px;
   background-color: transparent;
-  transition:background-color 0.6s ease-in-out;
-  -webkit-transition:background-color 0.6s ease-in-out;
-  -moz-transition:background-color 0.6s ease-in-out;
-  -o-transition:background-color 0.6s ease-in-out;
-  -ms-transition:background-color 0.6s ease-in-out;
+  transition:background-color 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
+  -webkit-transition:background-color 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
+  -moz-transition:background-color 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
+  -o-transition:background-color 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
+  -ms-transition:background-color 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
+  
   box-shadow: 0px;
   -moz-box-shadow: 0px;
-  -webkit-box-shadow: 0px;
+  -webkit-box-shadow: 0px;  
+  /*transition:all 0.6s ease-in-out;
+  -webkit-transition:all 0.6s ease-in-out;
+  -moz-transition:all 0.6s ease-in-out;
+  -o-transition:all 0.6s ease-in-out;
+  -ms-transition:all 0.6s ease-in-out;*/
   
 }
 .header.sticky {
@@ -239,7 +245,7 @@ a:hover {
   color: #333;
 }
 .name-text:hover {
-  color: rgba(235, 115, 2, 0.88);
+  color: rgba(235, 115, 2, 0.88)!important;
 }
 
 .nav-links {
@@ -288,13 +294,13 @@ a:hover {
   color: #333;
 }
 .nav-link:hover {
-  color: rgba(235, 115, 2, 0.88);
+  color: rgba(235, 115, 2, 0.88)!important;
 }
 #login-link {
   color: rgba(235, 115, 2, 0.88);
 }
 #login-link:hover {
-  color: #333;
+  color: #333!important;
 }
 .splash-image {
   position: static;
@@ -378,6 +384,9 @@ a:hover {
   margin-right: auto;
   width: 90%;
   max-width: 1040px;
+}
+.container.resume {
+	max-width: 980px;
 }
 .leftsidebar {
   position: relative;
